--- a/conway/src/index.css
+++ b/conway/src/index.css
@@ -1,7 +1,7 @@
-/* body {
-  background-image: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/squares.png) 
+body {
+  background-image: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/triangles.png) 
 }
-  
+/*   
 .box {
   display: inline-block;       
   border: 1px solid black;
